--- a/imgs.html
+++ b/imgs.html
@@ -769,30 +769,24 @@ h2{
   <div id="progressTextCompress" style="text-align: center; margin-top: 2px; font-size: 14px; display: none;">0%</div>
 </div>
 <script>
-  function handleImageSelect(section) {
-    // إخفاء أزرار الاختيار
-    if (section === 'compress') {
-      document.getElementById('choiceButtons2').style.display = "none";
-      startProgress('compress');
-    } else if (section === 'bg') {
-      document.getElementById('choiceButtons1').style.display = "none";
-      startProgress('bg');
-    }
+function handleImageSelect(section) {
+  if (section === 'compress') {
+    document.getElementById('choiceButtons2').style.display = "none";
+    startProgress('compress');
+  } else if (section === 'bg') {
+    document.getElementById('choiceButtons').style.display = "none";
+    startProgress('bg');
   }
+}
 
 
 
-      function removeBgLocal() {
-      document.getElementById('progressContainerBg').style.display = "none";
-      document.getElementById('progressTextBg').style.display = "none";
-      alert("تم تحميل الصورة بدون خلفية");
-    }
 
-    function compressImage() {
-      // إخفاء الشريط عند الضغط على تحميل
-      document.getElementById('progressContainerCompress').style.display = "none";
-      document.getElementById('progressTextCompress').style.display = "none";
-    }
+
+
+
+
+
 </script>
 
 <script>
@@ -870,42 +864,43 @@ h2{
 
 
 <script>
-  async function compressImage() {
-          // إخفاء الشريط عند الضغط على تحميل
-      document.getElementById('progressContainerBg').style.display = "none";
-      document.getElementById('progressTextBg').style.display = "none";
-    const input1 = document.getElementById("compressInput2a");
-    const input2 = document.getElementById("compressInput2");
-    const fileInput = input1.files.length ? input1 : input2;
-    const file = fileInput.files[0];
+ async function compressImage() {
+  // إخفاء شريط التقدم الخاص بالضغط
+  document.getElementById('progressContainerCompress').style.display = "none";
+  document.getElementById('progressTextCompress').style.display = "none";
 
-    if (!file) return alert("اختر صورة أولاً");
+  const input1 = document.getElementById("compressInput2a");
+  const input2 = document.getElementById("compressInput2");
+  const fileInput = input1.files.length ? input1 : input2;
+  const file = fileInput.files[0];
 
-    const reader = new FileReader();
-    reader.onload = () => {
-      const img = new Image();
-      img.onload = () => {
-        const canvas = document.createElement("canvas");
-        const maxWidth = 800;
-        const scale = Math.min(maxWidth / img.width, 1);
-        canvas.width = img.width * scale;
-        canvas.height = img.height * scale;
+  if (!file) return alert("اختر صورة أولاً");
 
-        const ctx = canvas.getContext("2d");
-        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+  const reader = new FileReader();
+  reader.onload = () => {
+    const img = new Image();
+    img.onload = () => {
+      const canvas = document.createElement("canvas");
+      const maxWidth = 800;
+      const scale = Math.min(maxWidth / img.width, 1);
+      canvas.width = img.width * scale;
+      canvas.height = img.height * scale;
 
-        // جودة مضغوطة
-        canvas.toBlob(blob => {
-          const link = document.createElement("a");
-          link.href = URL.createObjectURL(blob);
-          link.download = "compressed.jpg";
-          link.click();
-        }, "image/jpeg", 0.6); // جودة 60%
-      };
-      img.src = reader.result;
+      const ctx = canvas.getContext("2d");
+      ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+
+      canvas.toBlob(blob => {
+        const link = document.createElement("a");
+        link.href = URL.createObjectURL(blob);
+        link.download = "compressed.jpg";
+        link.click();
+      }, "image/jpeg", 0.6);
     };
-    reader.readAsDataURL(file);
-  }
+    img.src = reader.result;
+  };
+  reader.readAsDataURL(file);
+}
+
 </script>
 
 <script>
@@ -1023,53 +1018,55 @@ h2{
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0.5"></script>
 
 <script>
-   async function removeBgLocal() {
-          // إخفاء الشريط عند الضغط على تحميل
-      document.getElementById('progressContainerBg').style.display = "none";
-      document.getElementById('progressTextBg').style.display = "none";
-    const input1 = document.getElementById("bgRemoveInput");
-    const input2 = document.getElementById("bgRemoveInput1");
-    
-    const fileInput = input1.files.length ? input1 : input2;
-    const file = fileInput.files[0];
-    if (!file) return alert("اختر صورة أولاً");
+ async function removeBgLocal() {
+  const input1 = document.getElementById("bgRemoveInput");
+  const input2 = document.getElementById("bgRemoveInput1");
 
-    const img = new Image();
-    img.crossOrigin = "anonymous";
+  const fileInput = input1.files.length ? input1 : input2;
+  const file = fileInput.files[0];
+  if (!file) return alert("اختر صورة أولاً");
 
-    img.onload = async () => {
-      const canvas = document.createElement("canvas");
-      canvas.width = img.width;
-      canvas.height = img.height;
-      const ctx = canvas.getContext("2d");
-      ctx.drawImage(img, 0, 0);
+  const img = new Image();
+  img.crossOrigin = "anonymous";
 
-      const net = await bodyPix.load();
-      const segmentation = await net.segmentPerson(img);
+  img.onload = async () => {
+    const canvas = document.createElement("canvas");
+    canvas.width = img.width;
+    canvas.height = img.height;
+    const ctx = canvas.getContext("2d");
+    ctx.drawImage(img, 0, 0);
 
-      const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-      const pixels = imageData.data;
+    const net = await bodyPix.load();
+    const segmentation = await net.segmentPerson(img);
 
-      for (let i = 0; i < pixels.length / 4; i++) {
-        if (segmentation.data[i] === 0) {
-          pixels[i * 4 + 3] = 0; // شفافية الخلفية
-        }
+    const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+    const pixels = imageData.data;
+
+    for (let i = 0; i < pixels.length / 4; i++) {
+      if (segmentation.data[i] === 0) {
+        pixels[i * 4 + 3] = 0; // شفافية الخلفية
       }
+    }
 
-      ctx.putImageData(imageData, 0, 0);
+    ctx.putImageData(imageData, 0, 0);
 
-      // تحميل الصورة الناتجة تلقائياً
-      const outputUrl = canvas.toDataURL("image/png");
-      const link = document.createElement("a");
-      link.href = outputUrl;
-      link.download = "no-background.png";
-      link.click();
-    };
+    // تحميل الصورة الناتجة تلقائياً
+    const outputUrl = canvas.toDataURL("image/png");
+    const link = document.createElement("a");
+    link.href = outputUrl;
+    link.download = "no-background.png";
+    link.click();
 
-    const reader = new FileReader();
-    reader.onload = () => { img.src = reader.result; };
-    reader.readAsDataURL(file);
-  }
+    // ✅ إخفاء شريط التقدم بعد الانتهاء
+    document.getElementById('progressContainerBg').style.display = "none";
+    document.getElementById('progressTextBg').style.display = "none";
+  };
+
+  const reader = new FileReader();
+  reader.onload = () => { img.src = reader.result; };
+  reader.readAsDataURL(file);
+}
+
 </script>
 
   <script>
